[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/company_structure/company_structure.gd" id="1_struct"]

[node name="CompanyStructure" type="Control"]
custom_minimum_size = Vector2(450, 250)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_struct")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "公司结构"
horizontal_alignment = 1

[node name="CEORow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CEOSlot" type="Control" parent="MarginContainer/VBoxContainer/CEORow"]
custom_minimum_size = Vector2(130, 90)
layout_mode = 2

[node name="ManagerRow" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ManagerLabel" type="Label" parent="MarginContainer/VBoxContainer/ManagerRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "CEO 直属卡槽"
horizontal_alignment = 1

[node name="ManagerContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ManagerRow"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="InfoRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="SlotCountLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "卡槽: 0/3"

[node name="WarningLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoRow"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "超出限制!"
